--- a/src/index.css
+++ b/src/index.css
@@ -156,7 +156,7 @@
   box-shadow: 0 0 10px 2px rgba(255,255,255, 0.4);
 }
 
-@utility specialstar{
+@utility special-star{
   @apply absolute rounded-full bg-white ;
   box-shadow:
     0 0 40px 8px rgba(255, 255, 255, 0.8),
